Mega Menu overflow fix

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -611,7 +611,17 @@ main code start here
   display: flex;
   opacity: 0;
   visibility: hidden;
-  z-index: 99999999999999999; }
+  z-index: 99999999999999999;
+  max-height: 480px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  -o-overflow-style: none;
+  /* IE and Edge */
+  -webkit-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */ }
   .mega_menu_wrapper .mega_menu_item_box {
     padding: 20px 30px;
     flex: 1; }
@@ -641,6 +651,18 @@ main code start here
       margin: 12px 0px; }
   .mega_menu_wrapper .mega_menu_item_box_bg {
     background-color: #FBFBFB; }
+
+.mega_menu_wrapper::-webkit-scrollbar {
+  display: none; }
+
+.mega_menu_wrapper::-moz-scrollbar {
+  display: none; }
+
+.mega_menu_wrapper::-o-scrollbar {
+  display: none; }
+
+.mega_menu_wrapper::-ms-scrollbar {
+  display: none; }
 
 .man_color .link_box > a {
   color: #ee5f73 !important; }
